latest-eks-ter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website

---
apiVersion: v1
kind: Namespace
metadata:
  name: api
