latest-eks-ter/web-admin-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-page-deployment
  namespace: website
  labels:
    app: website-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-admin
  template:
    metadata:
      labels:
        app: website-admin
    spec:
      containers:
      - name: nginx
        image: prakhar0819/my-nginx:prakhar
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: website
spec:
  selector:
    app: website-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
